--- a/.gitignore
+++ b/.gitignore
@@ -38,7 +38,11 @@ playground.xcworkspace
 # Packages/
 # Package.pins
 # Package.resolved
-.build/
+.DS_Store
+/.build
+/Packages
+/*.xcodeproj
+
 
 # CocoaPods
 #
