--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,6 +20,10 @@ jobs:
           command: |
             swift package generate-xcodeproj --enable-code-coverage    
             xcodebuild -scheme SwiftDataLoader-Package -enableCodeCoverage YES test | xcpretty
+      - run:
+          name: Report coverage to Codecov
+          command: |
+            bash <(curl -s https://codecov.io/bash)
       - save_cache:
           key: v1-spm-deps-{{ checksum "Package.swift" }}
           paths:
