--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,10 +8,8 @@ jobs:
   strategy:
     maxParallel: 10
     matrix:
-      swift420:
-        containerImage: norionomura/swift:42
-      swift421:
-        containerImage: norionomura/swift:421
+      swift500:
+        containerImage: apple/swift:5
   container: $[ variables['containerImage'] ]
   steps:
     - script: swift test --parallel
@@ -19,14 +17,12 @@ jobs:
 
 - job: Xcode
   pool:
-    vmImage: 'macOS 10.13'
+    vmImage: 'macOS 10.14'
   strategy:
     maxParallel: 10
     matrix:
-      xcode10:
-        DEVELOPER_DIR: /Applications/Xcode_10.app
-      xcode101:
-        DEVELOPER_DIR: /Applications/Xcode_10.1.app
+      xcode102:
+        DEVELOPER_DIR: /Applications/Xcode_10.2.app
   steps:
     - script: swift package generate-xcodeproj
       displayName: Generate Xcode project file
@@ -45,14 +41,12 @@ jobs:
 
 - job: SwiftPM
   pool:
-    vmImage: 'macOS 10.13'
+    vmImage: 'macOS 10.14'
   strategy:
     maxParallel: 10
     matrix:
-      xcode10:
-        DEVELOPER_DIR: /Applications/Xcode_10.app
       xcode101:
-        DEVELOPER_DIR: /Applications/Xcode_10.1.app
+        DEVELOPER_DIR: /Applications/Xcode_10.2.app
   steps:
     - script: xcodebuild -version
       displayName: xcodebuild -version
