--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,6 +6,18 @@ on:
   pull_request:
     branches: [ main ]
 jobs:
+  formatlint:
+    name: Format linting
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: sinoru/actions-setup-swift@v2
+        with:
+          swift-version: '5.6.1'
+      - name: GitHub Action for SwiftFormat
+        uses: CassiusPacheco/action-swiftformat@v0.1.0
+        with:
+          swiftformat-version: '0.49.17'
   macos-build:
     name: Build and test on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
